# gong-notes-automation

./: .env.example  .gitignore  README.md  activities.py  pyproject.toml  trigger.py  worker.py  workflow.py
.claude/: CLAUDE.md
.claude/skills/: gong-api.md  google-apis.md
scripts/: get-token.py  test_append_notes.py  test_date_matching.py  test_drive_search.py  test_gdocs.py  test_llm_doc_finder.py
